weiwei/task01/style/css1-2.css
.clearfix::before,.clearfix::after{
	display: table;
	content:'';
}

.clearfix::after{
	clear:both;
}
.clearfix{
	zoom:1;
}
a{
	text-decoration: none;
}
/* ul,ol{
	list-style: none;
}
 */body{
	background-color: #f5f5f5;
	padding:0 30px;
	font:14px/2em san-serif, Microsoft Yahei;
}

header,main,footer{
	margin:0 auto;
	width: 100%;
	box-sizing:border-box;
}

body>header,body>footer{
	background-color: #000;
	height: 50px;
	line-height: 50px;
	color:#fff;
}


/* header部分 */

a.slogan{
	display: inline-block;
	margin:10px 0 10px 20px;
}
ul.navTop{
	display: inline-block;
	float: right;
	margin:0;
	padding:0;
}
ul.navTop >li{
	display: inline-block;
	float: left;
	margin:0 10px;
}
ul.navTop >li>a{
	display: block;
	color:#fff;
	height: 50px;
	line-height: 50px;
}
ul.navTop >li>a.on{
	color:#999;
}
/* main*/
main{
	padding:20px;
}

article,aside{
	background-color: #fff;
	margin:20px 0;
	padding:20px 15px;
	box-sizing:border-box;
}
/* article */
article{
 	width: 100%;
}
article p{
	text-indent: 2em;
}
article header{

}
article header>h3{
	color:#888;
}
article header >small{
	color:#888;
}

/*好看的图片 */
section.goodPic{
	border:1px solid #000;
	width: 122px;
	height: 122px;
	padding:10px;
	text-align:center;
	margin:20px 0 20px 40px;
	box-sizing:border-box;
}
section.goodPic>p{
	font-size: 12px;
	text-indent: 0;
	margin:0;
}
section.goodPic > img{
	width: 100%;
	height: 72px;
}
/* 表格区域 */
table{
	width: 100%;
	border-collapse: collapse;
}
table td,table th{
	border:1px solid #e5e5e5;
	padding:3px 7px 2px 7px;
	text-align:left;
}

table th{
	background-color: #666;
	color:#fff;
}
table tr:last-Child{
	background-color: #e5e5e5;
}
/* aside */
aside{
	width:96%;
}
aside h3{
	position: relative;
	margin-left:30px;
}

aside h3::before{
	display:inline-block;
	content:'';
	width: 5px;
	height: 100%;
	background-color: red;
	position: absolute;
	left:-30px;
	top:0;
}
/* 表单 */
form{
	margin:30px 0 30px 200px;

	/* text-align: center; */
}
label{
	display: inline-block;
	width: 100px;
	text-align: right;
}
input,select,textarea{
	margin-left:15px;
	color:#000;
}
span.errortips{
	display: inline-block;
	margin-left:118px;
	width: 150px;
	text-align: left;
	color:#888;
}

textarea{
	vertical-align: top;
	width: 80%;
}
.btnSub{
	width: 100%;
	height: 30px;
	border:0;
	border-radius: 15px;
	background-color: lightgreen;
	color:#fff;
	cursor:pointer;
}

